rename workflow job

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -6,8 +6,8 @@ on:
   pull_request:
 
 jobs:
-  lint:
-    name: Lint and build
+  lint-and-test:
+    name: Lint and test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
