--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -1,13 +1,17 @@
-name: Default
+name: Check
 
 on:
   push:
     branches: [main, master]
   pull_request:
 
+env:
+  INFURA_API_KEY: ${{secrets.INFURA_API_KEY}}
+  MNEMONIC: ${{secrets.MNEMONIC}}
+
 jobs:
-  lint-and-test:
-    name: Lint and test
+  lint:
+    name: Contracts - Lint
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -18,4 +22,15 @@ jobs:
       - name: Install dependencies
         run: yarn --frozen-lockfile
       - run: yarn lint
-      - run: yarn test
+  coverage:
+    name: Contracts - Coverage
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: "16.x"
+      - name: Install dependencies
+        run: yarn --frozen-lockfile
+      - run: yarn coverage
