--- a/package.json
+++ b/package.json
@@ -1,62 +1,64 @@
 {
-  "name": "@paulrberg/solidity-template",
-  "description": "Template for writing Solidity smart contracts",
-  "version": "1.0.0",
+  "name": "curvance-contracts",
+  "description": "Contracts for the Curvance platform",
+  "version": "0.0.1",
   "author": {
-    "name": "Paul Razvan Berg",
-    "url": "https://paulrberg.com"
+    "name": "Curvance",
+    "url": "https://www.curvance.com"
   },
   "devDependencies": {
-    "@codechecks/client": "^0.1.12",
-    "@commitlint/cli": "^14.1.0",
-    "@commitlint/config-conventional": "^14.1.0",
-    "@ethersproject/abi": "^5.5.0",
-    "@ethersproject/abstract-signer": "^5.5.0",
-    "@ethersproject/bignumber": "^5.5.0",
-    "@ethersproject/bytes": "^5.5.0",
-    "@ethersproject/providers": "^5.5.0",
-    "@nomiclabs/hardhat-ethers": "^2.0.2",
-    "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@openzeppelin/contracts": "^4.4.1",
-    "@openzeppelin/test-helpers": "^0.5.15",
-    "@typechain/ethers-v5": "^8.0.5",
-    "@typechain/hardhat": "^3.0.0",
-    "@types/chai": "^4.2.22",
-    "@types/fs-extra": "^9.0.13",
-    "@types/mocha": "^9.0.0",
-    "@types/node": "^16.11.10",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
-    "big-number": "^2.0.0",
-    "chai": "^4.3.4",
-    "commitizen": "^4.2.4",
-    "cross-env": "^7.0.3",
-    "cz-conventional-changelog": "^3.3.0",
-    "dotenv": "^10.0.0",
-    "eslint": "^8.3.0",
-    "eslint-config-prettier": "^8.3.0",
-    "ethereum-waffle": "^3.4.0",
-    "ethers": "^5.5.1",
-    "fs-extra": "^10.0.0",
-    "hardhat": "^2.7.0",
-    "hardhat-gas-reporter": "^1.0.4",
-    "husky": "^7.0.4",
-    "jsonfile": "^6.1.0",
-    "lint-staged": "^11.2.6",
-    "lodash": "^4.17.21",
-    "mocha": "^9.1.3",
-    "pinst": "^2.1.6",
-    "prettier": "^2.5.0",
-    "prettier-plugin-solidity": "^1.0.0-beta.19",
-    "shelljs": "^0.8.4",
-    "shx": "^0.3.3",
-    "solhint": "^3.3.6",
-    "solhint-plugin-prettier": "^0.0.5",
-    "solidity-coverage": "^0.7.17",
-    "ts-generator": "^0.1.1",
-    "ts-node": "^10.4.0",
-    "typechain": "^6.0.5",
-    "typescript": "^4.5.2"
+    "@codechecks/client": "0.1.12",
+    "@commitlint/cli": "14.1.0",
+    "@commitlint/config-conventional": "14.1.0",
+    "@ethersproject/abi": "5.5.0",
+    "@ethersproject/abstract-signer": "5.5.0",
+    "@ethersproject/bignumber": "5.5.0",
+    "@ethersproject/bytes": "5.5.0",
+    "@ethersproject/providers": "5.5.0",
+    "@nomiclabs/hardhat-ethers": "2.0.2",
+    "@nomiclabs/hardhat-waffle": "2.0.1",
+    "@openzeppelin/contracts": "4.4.1",
+    "@openzeppelin/test-helpers": "0.5.15",
+    "@typechain/ethers-v5": "8.0.5",
+    "@typechain/hardhat": "3.0.0",
+    "@types/chai": "4.2.22",
+    "@types/fs-extra": "9.0.13",
+    "@types/mocha": "9.0.0",
+    "@types/node": "16.11.10",
+    "@typescript-eslint/eslint-plugin": "5.4.0",
+    "@typescript-eslint/parser": "5.4.0",
+    "big-number": "2.0.0",
+    "chai": "4.3.4",
+    "commander": "8.3.0",
+    "commitizen": "4.2.4",
+    "cross-env": "7.0.3",
+    "cz-conventional-changelog": "3.3.0",
+    "dotenv": "10.0.0",
+    "eslint": "8.3.0",
+    "eslint-config-prettier": "8.3.0",
+    "ethereum-waffle": "3.4.0",
+    "ethereumjs-util": "7.1.3",
+    "ethers": "5.5.1",
+    "fs-extra": "10.0.0",
+    "hardhat": "2.7.0",
+    "hardhat-gas-reporter": "1.0.4",
+    "husky": "7.0.4",
+    "jsonfile": "6.1.0",
+    "lint-staged": "11.2.6",
+    "lodash": "4.17.21",
+    "mocha": "9.1.3",
+    "pinst": "2.1.6",
+    "prettier": "2.5.0",
+    "prettier-plugin-solidity": "1.0.0-beta.19",
+    "shelljs": "0.8.4",
+    "shx": "0.3.3",
+    "solhint": "3.3.6",
+    "solhint-plugin-prettier": "0.0.5",
+    "solidity-coverage": "0.7.17",
+    "ts-generator": "0.1.1",
+    "ts-node": "10.4.0",
+    "typechain": "6.0.5",
+    "typescript": "4.5.2"
   },
   "files": [
     "/contracts"
