--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -10,18 +10,18 @@ env:
   MNEMONIC: ${{secrets.MNEMONIC}}
 
 jobs:
-  lint:
-    name: Contracts - Lint
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: "16.x"
-      - name: Install dependencies
-        run: yarn --frozen-lockfile
-      - run: yarn lint
+  # lint:
+  #   name: Contracts - Lint
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - name: Use Node.js
+  #       uses: actions/setup-node@v2
+  #       with:
+  #         node-version: "16.x"
+  #     - name: Install dependencies
+  #       run: yarn --frozen-lockfile
+  #     - run: yarn lint
   coverage:
     name: Contracts - Coverage
     runs-on: ubuntu-latest
