--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@ethersproject/providers": "5.5.0",
     "@nomiclabs/hardhat-ethers": "2.0.2",
     "@nomiclabs/hardhat-waffle": "2.0.1",
-    "@openzeppelin/contracts": "4.4.1",
+    "@openzeppelin/contracts": "^4.4.1",
     "@openzeppelin/test-helpers": "0.5.15",
     "@typechain/ethers-v5": "8.0.5",
     "@typechain/hardhat": "3.0.0",
