--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -10,8 +10,8 @@ env:
   MNEMONIC: ${{secrets.MNEMONIC}}
 
 jobs:
-  # lint:
-  #   name: Contracts - Lint
+  # coverage:
+  #   name: Contracts - Coverage
   #   runs-on: ubuntu-latest
   #   steps:
   #     - uses: actions/checkout@v2
@@ -21,16 +21,4 @@ jobs:
   #         node-version: "16.x"
   #     - name: Install dependencies
   #       run: yarn --frozen-lockfile
-  #     - run: yarn lint
-  coverage:
-    name: Contracts - Coverage
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: "16.x"
-      - name: Install dependencies
-        run: yarn --frozen-lockfile
-      - run: yarn coverage
+  #     - run: yarn coverage
