feat(PriceRouter): modify price router to work for Curvance

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,8 @@ src/types/*
 !src/types/factories
 src/types/factories/*
 !src/types/factories/Greeter__factory.ts
+
+# Foundry
+cache/
+out/
+broadcast/
