Work on yearn deposits

--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "prettier": "prettier --config ./.prettierrc.yaml --write \"**/*.{js,json,md,sol,ts}\"",
     "prettier:check": "prettier --check --config ./.prettierrc.yaml \"**/*.{js,json,md,sol,ts}\"",
     "test": "hardhat test",
-    "typechain": "cross-env TS_NODE_TRANSPILE_ONLY=true hardhat typechain"
+    "typechain": "cross-env TS_NODE_TRANSPILE_ONLY=true hardhat typechain",
+    "forkTest": "source .env && forge test -vv --fork-url $MAINNET_RPC_URL --fork-block-number $BLOCK_NUMBER"
   }
 }
