forge install: solmate

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "lib/compound-protocol"]
 	path = lib/compound-protocol
 	url = https://github.com/compound-finance/compound-protocol
+[submodule "lib/solmate"]
+	path = lib/solmate
+	url = https://github.com/transmissions11/solmate
