--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "lib/solmate"]
 	path = lib/solmate
 	url = https://github.com/transmissions11/solmate
+[submodule "lib/v3-periphery"]
+	path = lib/v3-periphery
+	url = https://github.com/crispymangoes/v3-periphery
