try old team name

--- a/.github/workflows/assign-reviewers.yml
+++ b/.github/workflows/assign-reviewers.yml
@@ -11,6 +11,6 @@ jobs:
         uses: rowi1de/auto-assign-review-teams@v1.0.1
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-          teams: "Smart Contract Team" # only works for GitHub Organisation/Teams
+          teams: "smart-contract-team" # only works for GitHub Organisation/Teams
           include-draft: false # Draft PRs will be skipped (default: false)
           skip-with-manual-reviewers: 2 # Skip this action, if the number of reviwers was already assigned (default: 0)
