--- a/.github/workflows/assign-reviewers.yml
+++ b/.github/workflows/assign-reviewers.yml
@@ -7,6 +7,10 @@ jobs:
   assign-reviewers:
     runs-on: ubuntu-latest
     steps:
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20.x'
       - name: "Assign Team"
         uses: rowi1de/auto-assign-review-teams@v1.0.1
         with:
