--- a/.github/workflows/assign-reviewers.yml
+++ b/.github/workflows/assign-reviewers.yml
@@ -7,10 +7,14 @@ jobs:
   assign-reviewers:
     runs-on: ubuntu-latest
     steps:
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20.x'
       - name: "Assign Team"
         uses: rowi1de/auto-assign-review-teams@v1.0.1
         with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          repo-token: ${{ secrets.AUSTIN_PERSONAL_API_KEY }}
           teams: "smart-contract-team" # only works for GitHub Organisation/Teams
           include-draft: false # Draft PRs will be skipped (default: false)
           skip-with-manual-reviewers: 2 # Skip this action, if the number of reviwers was already assigned (default: 0)
