Initial RBAC test setup for FuzzVECVE

--- a/tests/fuzzing/cloud.yaml
+++ b/tests/fuzzing/cloud.yaml
@@ -1,6 +1,6 @@
-testMode: exploration
-# testLimit: 1000000
-testLimit: 100000000000000
+testMode: assertion
+testLimit: 100
+# testLimit: 100000000000000
 coverage: true 
 corpusDir: "echidna-corpus"
 cryticArgs: ["--ignore-compile"]
