--- a/tests/fuzzing/echidna-cloud.yaml
+++ b/tests/fuzzing/echidna-cloud.yaml
@@ -1,5 +1,5 @@
-testMode: exploration
-testLimit: 1000000
+testMode: assertion
+testLimit: 100000000000
 coverage: true 
 corpusDir: "output/echidna-corpus"
 cryticArgs: ["--ignore-compile"]
