--- a/tests/fuzzing/echidna-cloud.yaml
+++ b/tests/fuzzing/echidna-cloud.yaml
@@ -1,6 +1,6 @@
 testMode: assertion # run to detect assertions 
-testLimit: 10000000 # note: significantly larger test limit for server runs 
+testLimit: 30000000 # note: significantly larger test limit for server runs 
 coverage: true # turns coverage saving on 
-corpusDir: "output/echidna-corpus" # save in ./output/echidna-corpus 
+corpusDir: "output/echidna-vecve-corpus" # save in ./output/echidna-corpus 
 cryticArgs: ["--ignore-compile"] # do not recompile when running 
-workers: 10 # increased number of workers 
+workers: 14 # increased number of workers 
