--- a/tests/fuzzing/echidna-local.yaml
+++ b/tests/fuzzing/echidna-local.yaml
@@ -1,8 +1,10 @@
 testMode: assertion # run to detect failed assertions 
 coverage: true  # turns coverage saving "on" 
-corpusDir: "output/echidna-corpus" # saves coverage into ./output/echidna-corpus
+corpusDir: "output/echidna-vecve-corpus" # saves coverage into ./output/echidna-corpus
 cryticArgs: ["--ignore-compile"] # do not recompile the contracts when echidna runs 
 testMaxGas: 1250000000 # increases test max gas for future complex operations 
 codeSize: 0xfffffffffff # increase the code size 
 testLimit: 400000 # this is the # of iterations Echidna will attempt before it shuts down
 workers: 5 # increases the # of workers/threads to run 
+format: text
+filterFunctions: ["FuzzingSuite.processExpiredLock_should_succeed_if_shutdown(uint256)", "FuzzingSuite.processExpiredLock_should_succeed_if_unlocktime_expired(bool)"]
