Cherry-picked f04cff94 for function, helper, and system folders

--- a/cloudexec.toml
+++ b/cloudexec.toml
@@ -4,7 +4,7 @@
 [input]
 directory = "."
 timeout = "96h"
-jobName = "echidna market manager 10000000"
+jobName = "echidna market-manager-rebase-0123 10000000"
 
 [commands]
 setup = '''
