--- a/tests/fuzzing/echidna-cloud.yaml
+++ b/tests/fuzzing/echidna-cloud.yaml
@@ -4,3 +4,4 @@ coverage: true # turns coverage saving on
 corpusDir: "output/echidna-vecve-corpus" # save in ./output/echidna-corpus 
 cryticArgs: ["--ignore-compile"] # do not recompile when running 
 workers: 14 # increased number of workers 
+format: text
