Added dtoken liquidation functions, and prettier on 0.0.165 vscode-solidity extension

--- a/tests/fuzzing/config/echidna-cloud.yaml
+++ b/tests/fuzzing/config/echidna-cloud.yaml
@@ -1,7 +1,10 @@
-testMode: assertion # run to detect assertions 
-testLimit: 10000000 # note: significantly larger test limit for server runs 
-coverage: true # turns coverage saving on 
-corpusDir: "output/market-manager-rebase-0123" # save in ./output/echidna-corpus 
-cryticArgs: ["--ignore-compile"] # do not recompile when running 
-workers: 10 # increased number of workers 
+testMode: assertion # run to detect assertions
+testLimit: 10000000 # note: significantly larger test limit for server runs
+coverage: true # turns coverage saving on
+corpusDir: "output/echidna-corpus" # save in ./output/echidna-corpus
+cryticArgs: ["--ignore-compile"] # do not recompile when running
+workers: 15 # increased number of workers
 format: text
+maxTimeDelay: 2689117
+maxBlockDelay: 2689117
+seqLen: 200
