--- a/tests/fuzzing/config/echidna-local.yaml
+++ b/tests/fuzzing/config/echidna-local.yaml
@@ -1,9 +1,12 @@
-testMode: assertion # run to detect failed assertions 
-coverage: true  # turns coverage saving "on" 
-corpusDir: "output/market-manager-rebase-0123" # saves coverage into ./output/echidna-corpus
-cryticArgs: ["--ignore-compile"] # do not recompile the contracts when echidna runs 
-testMaxGas: 1250000000 # increases test max gas for future complex operations 
-codeSize: 0xfffffffffff # increase the code size 
+testMode: assertion # run to detect failed assertions
+coverage: true # turns coverage saving "on"
+corpusDir: "output/echidna-corpus" # saves coverage into ./output/echidna-corpus
+cryticArgs: ["--ignore-compile"] # do not recompile the contracts when echidna runs
+testMaxGas: 1250000000 # increases test max gas for future complex operations
+codeSize: 0xfffffffffff # increase the code size
 testLimit: 400000 # this is the # of iterations Echidna will attempt before it shuts down
-workers: 5 # increases the # of workers/threads to run 
-# format: text
+workers: 5 # increases the # of workers/threads to run
+format: text
+maxTimeDelay: 2689117
+maxBlockDelay: 2689117
+seqLen: 200
