--- a/foundry.toml
+++ b/foundry.toml
@@ -17,5 +17,5 @@ fs_permissions = [
 # Sets the concrete solc version to use
 # This overrides the `auto_detect_solc` value
 solc_version = '0.8.17'
-evm_version = 'london'
+evm_version = 'shanghai'
 auto_detect_solc = false
