--- a/.github/workflows/forge.yml
+++ b/.github/workflows/forge.yml
@@ -9,6 +9,8 @@ jobs:
       ETH_NODE_URI_MAINNET: ${{ secrets.ETH_NODE_URI_MAINNET }}
       ETH_NODE_URI_ARBITRUM: ${{ secrets.ETH_NODE_URI_ARBITRUM }}
       ETH_NODE_URI_OPTIMISM: ${{ secrets.ETH_NODE_URI_OPTIMISM }}
+      ETH_NODE_URI_POLYGON: ${{ secrets.ETH_NODE_URI_POLYGON }}
+      ETH_NODE_URI_BASE: ${{ secrets.ETH_NODE_URI_BASE }}
     steps:
       - uses: actions/checkout@v3
         with:
