Add forge coverage github action back in

--- a/.github/workflows/forge.yml
+++ b/.github/workflows/forge.yml
@@ -29,3 +29,6 @@ jobs:
 
       - name: Run forge tests
         run: forge test
+
+      - name: Run forge coverage report
+        run: forge coverage
