--- a/tests/fuzzing/config/echidna-local.yaml
+++ b/tests/fuzzing/config/echidna-local.yaml
@@ -6,7 +6,7 @@ testMaxGas: 1250000000 # increases test max gas for future complex operations
 codeSize: 0xfffffffffff # increase the code size
 testLimit: 600000 # this is the # of iterations Echidna will attempt before it shuts down
 workers: 5 # increases the # of workers/threads to run
-format: text
-maxTimeDelay: 2689117
-maxBlockDelay: 2689117
-seqLen: 200
+format: text # this defaults to text mode as opposed to using Echidna UI 
+maxTimeDelay: 2689117 # this increases the time delay that Echidna can test in the system 
+maxBlockDelay: 2689117 #this increases the block delay that Echidna can test
+seqLen: 200 # this increases the # of sequences Echidna can use to determine exploitability 
